Верстка попап с адаптивом

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 </head>
 <body class="body">
   <div class="page">
+    <section class= "profile-form">
+      <button class="profile-form__toggle">
+      </button>
+      <div class="profile-form__container">
+        <h2 class="profile-form__title">Редактировать профиль</h2>
+        <form class="profile-form__form">
+          <input class="profile-form__input-field">
+          <input class="profile-form__input-field">
+          <button class="profile-form__save-button">Сохранить</button>
+        </form>
+      </div>
+    </section>
     <header class="header">
       <img class="header__logo" src="./images/header/header-logo.svg" alt="Лого">
     </header>
