--- a/index.html
+++ b/index.html
@@ -26,54 +26,6 @@
         </button>
       </section>
       <section class="elements">
-        <article class="element">
-          <img class="element__photo" src="./images/elements/elements-olkhon.JPG" alt="Ольхон">
-          <div class="element__text-block">
-            <h2 class="element__title">о. Ольхон</h2>
-            <button class="element__like-button" type="button">
-            </button>
-          </div>
-        </article>
-        <article class="element">
-          <img class="element__photo" src="./images/elements/elements-aya.JPG" alt="Бухта Ая">
-          <div class="element__text-block">
-            <h2 class="element__title">бухта Ая</h2>
-            <button class="element__like-button" type="button">
-            </button>
-          </div>
-        </article>
-        <article class="element">
-          <img class="element__photo" src="./images/elements/elements-tazherany.JPG" alt="Тажераны">
-          <div class="element__text-block">
-            <h2 class="element__title">Тажеранские степи</h2>
-            <button class="element__like-button" type="button">
-            </button>
-          </div>
-        </article>
-        <article class="element">
-          <img class="element__photo" src="./images/elements/elements-mamay.JPG" alt="Мамай">
-          <div class="element__text-block">
-            <h2 class="element__title">Мамай</h2>
-            <button class="element__like-button" type="button">
-            </button>
-          </div>
-        </article>
-        <article class="element">
-          <img class="element__photo" src="./images/elements/elements-bbt.JPG" alt="ББТ">
-          <div class="element__text-block">
-            <h2 class="element__title">Большая Байкальская Тропа</h2>
-            <button class="element__like-button" type="button">
-            </button>
-          </div>
-        </article>
-        <article class="element">
-          <img class="element__photo" src="./images/elements/elements-arshan.JPG" alt="Аршан">
-          <div class="element__text-block">
-            <h2 class="element__title">Аршан</h2>
-            <button class="element__like-button" type="button">
-            </button>
-          </div>
-        </article>
       </section>
     </main>
     <footer class="footer">
@@ -92,6 +44,16 @@
       </div>
     </div>
   </div>
+  <template id="element-template">
+    <article class="element">
+      <img class="element__photo" src="" alt="">
+      <div class="element__text-block">
+        <h2 class="element__title"></h2>
+        <button class="element__like-button" type="button">
+        </button>
+      </div>
+    </article>
+  </template>
   <script src="js/script.js"></script>
 </body>
 </html>
