Feat likes, remove cards

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 
   <template id="element-template">
     <article class="element">
+      <button class="element__basket-button" type="button">
+      </button>
       <img class="element__photo" src="" alt="">
       <div class="element__text-block">
         <h2 class="element__title"></h2>
