--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="popup" id="viewPhoto">
       <button class="popup__close-button" type="button">
       </button>
-      <img class="popup__photo" src="">
+      <img class="popup__photo" src="./images/profile/profile-image.jpg" alt="Описание изображения">
       <h3 class="popup__photo-caption"></h3>
     </div>
   </div>
