Add Card.js, card by class

--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
       </div>
     </article>
   </template>
-  <script src="js/script.js"></script>
   <script src="js/validate.js"></script>
-  <script src="js/initial-cards.js"></script>
+  <script type="module" src="js/index.js"></script>
 </body>
 </html>
