8 Sprint, all classes, validation problems

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <span class="title-input-error form__input-error"></span>
           </label>
           <label class="form__field">
-            <input id="url-input" required class="form__input-field" type="url" name="description" placeholder="Ссылка на картинку">
+            <input id="url-input" required class="form__input-field" type="url" name="link" placeholder="Ссылка на картинку">
             <span class="url-input-error form__input-error"></span>
           </label>
           <button class="form__submit-button" type="submit">Сохранить</button>
