--- a/index.html
+++ b/index.html
@@ -87,6 +87,6 @@
       </div>
     </article>
   </template>
-  <script type="module" src="js/index.js"></script>
+  <script type="module" src="pages/index.js"></script>
 </body>
 </html>
