all sprint project

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
     <div class="popup" id="viewPhoto">
       <button class="popup__close-button" type="button">
       </button>
-      <img class="popup__photo" src="./images/profile/profile-image.jpg" alt="Описание изображения">
+      <img class="popup__photo" src='<%=require("./images/profile/profile-image.jpg")%>' alt="Описание изображения">
       <h3 class="popup__photo-caption"></h3>
     </div>
   </div>
@@ -78,7 +78,7 @@
     <article class="element">
       <button class="element__basket-button" type="button">
       </button>
-      <img class="element__photo" src="./images/profile/profile-image.jpg" alt="Описание изображения">
+      <img class="element__photo" src='<%=require("./images/profile/profile-image.jpg")%>' alt="Описание изображения">
       <div class="element__text-block">
         <h2 class="element__title"></h2>
         <button class="element__like-button" type="button">
