--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,6 @@
     <footer class="footer">
       <p class="footer__copyright">&copy; 2021 Mesto Russia</p>
     </footer>
-
     <div class= "popup" id="profileImageForm">
       <button class="popup__close-button" type="button">
       </button>
@@ -48,7 +47,6 @@
         </form>
       </div>
     </div>
-
     <div class= "popup" id="profileForm">
       <button class="popup__close-button" type="button">
       </button>
@@ -90,6 +88,14 @@
       </button>
       <img class="popup__photo" src='<%=require("./images/profile/profile-image.jpg")%>' alt="Описание изображения">
       <h3 class="popup__photo-caption"></h3>
+    </div>
+    <div class= "popup" id="deleteImagePopup">
+      <button class="popup__close-button" type="button">
+      </button>
+      <div class="popup__container">
+        <h2 class="popup__title">Вы уверены?</h2>
+        <button class="form__submit-button" type="submit">Да</button>
+      </div>
     </div>
   </div>
   <template id="element-template">
