Get cards from server

--- a/src/index.html
+++ b/src/index.html
@@ -94,9 +94,12 @@
       </button>
       <div class="popup__container">
         <h2 class="popup__title">Вы уверены?</h2>
-        <button class="form__submit-button" type="submit">Да</button>
+        <form class="form" name="popupAddCardForm" novalidate>
+          <button id="confirmationButton" class="form__submit-button" type="submit">Да</button>
+        </form>
       </div>
     </div>
+
   </div>
   <template id="element-template">
     <article class="element">
