Add new card, show likes for card

--- a/src/index.html
+++ b/src/index.html
@@ -108,8 +108,10 @@
       <img class="element__photo" src='<%=require("./images/profile/profile-image.jpg")%>' alt="Описание изображения">
       <div class="element__text-block">
         <h2 class="element__title"></h2>
-        <button class="element__like-button" type="button">
-        </button>
+        <div class="element__like-section">
+          <button class="element__like-button" type="button"></button>
+          <span class="element__like-count">0</span>
+        </div>
       </div>
     </article>
   </template>
